Easy peasy CSS fix for badge alignment kekw

--- a/style.css
+++ b/style.css
@@ -189,5 +189,8 @@ p {
 }
 
 .zenoBadge {
-    height: 50px;
+    height: 68px;
+    transform: translateY(35%);
+    margin-right: 3px;
+    margin-left: 5px;
 }
